compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__missing_case_body.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2701
expression: case True
snapshot_kind: text
---
----- SOURCE CODE
case True

----- ERROR
error: Missing case body
  ┌─ /src/one/two.gleam:1:1
  │
1 │ case True
  │ ^^^^^^^^^

This case expression is missing its body.
