compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_arity_error.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 808
expression: "fn go(x: List(a, b)) -> Int { 1 }"
snapshot_kind: text
---
----- SOURCE CODE
fn go(x: List(a, b)) -> Int { 1 }

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:10
  │
1 │ fn go(x: List(a, b)) -> Int { 1 }
  │          ^^^^^^^^^^ Expected 1 type argument, got 2

`List` requires 1 type argument but 2 where provided.
